--- a/app/src/main/res/layout/activity_view_events.xml
+++ b/app/src/main/res/layout/activity_view_events.xml
@@ -1,79 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codepath.engage.ViewEvents"
-    android:fitsSystemWindows="true">
+    tools:openDrawer="start">
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/navigational"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.codepath.engage.ViewEvents"
+        android:fitsSystemWindows="true">
+
+        <include
+            android:id="@+id/include"
+            layout="@layout/navigational"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="0dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvEvents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/include"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="2dp"
+            tools:layout_editor_absoluteY="65dp"
+            android:layout_alignParentEnd="true" />
+
+
+
+    </RelativeLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nvView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="0dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-    <!--<android.support.v7.widget.Toolbar-->
-        <!--android:id="@+id/toolbar"-->
-        <!--android:minHeight="?attr/actionBarSize"-->
-        <!--android:layout_width="368dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--app:titleTextColor="@android:color/white"-->
-        <!--android:background="?attr/colorPrimary"-->
-        <!--tools:layout_editor_absoluteY="0dp"-->
-        <!--tools:layout_editor_absoluteX="8dp"-->
-        <!--tools:ignore="MissingConstraints">-->
-        <!--&lt;!&ndash;Setting the Items for the toolbar&ndash;&gt;-->
-        <!--<LinearLayout-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="horizontal"-->
-            <!--android:weightSum="1">-->
-            <!--<android.support.v7.widget.LinearLayoutCompat-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content">-->
-                <!--&lt;!&ndash;Search View for the tool bar&ndash;&gt;-->
-                <!--<android.support.v7.widget.SearchView-->
-                    <!--android:id="@+id/search"-->
-                    <!--android:layout_width="250dp"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:theme="@style/SearchViewTheme"-->
-                    <!--tools:layout_editor_absoluteX="8dp"-->
-                    <!--tools:layout_editor_absoluteY="0dp" />-->
-            <!--</android.support.v7.widget.LinearLayoutCompat>-->
-            <!--&lt;!&ndash;Filter Button For Search View&ndash;&gt;-->
-            <!--<ImageButton-->
-                <!--android:id="@+id/btnFilter"-->
-                <!--android:layout_width="30dp"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:src="@color/colorPrimaryDark"-->
-                <!--android:background="@android:color/transparent"/>-->
-            <!--&lt;!&ndash;Profile Button to Take to profile view&ndash;&gt;-->
-            <!--<ImageButton-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:src="@drawable/ic_person_black_24dp"-->
-                <!--android:background="@android:color/transparent"-->
-                <!--android:layout_marginStart="10dp"-->
-                <!--android:layout_weight="4" />-->
-        <!--</LinearLayout>-->
-
-    <!--</android.support.v7.widget.Toolbar>-->
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvEvents"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/include"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="65dp"
-        android:layout_alignParentEnd="true" />
-
-</RelativeLayout>
+        android:layout_gravity="end"
+        android:background="@android:color/white"
+        android:theme="@style/AppTheme"
+        app:itemTextColor="@android:color/black"
+        app:menu="@menu/profilebar"
+        android:layout_alignParentTop="true" />
+</android.support.v4.widget.DrawerLayout>
