--- a/app/src/main/res/menu/profilebar.xml
+++ b/app/src/main/res/menu/profilebar.xml
@@ -15,6 +15,10 @@
             <item
                 android:id="@+id/nav_third_fragment"
                 android:title="Past Events" />
+            <item
+                android:id="@+id/nav_fifth_fragment"
+                android:title="Log Out"
+                />
 
         </group>
 </menu>
