--- a/app/src/main/res/layout/navigational.xml
+++ b/app/src/main/res/layout/navigational.xml
@@ -14,7 +14,8 @@
         android:fitsSystemWindows="true"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        >
 
     </android.support.v7.widget.Toolbar>
 
