--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,7 +7,7 @@
     tools:context="com.codepath.engage.ProfileActivity">
 
     <TextView
-        android:id="@+id/myProfile"
+        android:id="@+id/profileHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="My Profile"
@@ -27,7 +27,7 @@
         android:id="@+id/Home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/myProfile"
+        android:layout_alignBottom="@+id/profileHeader"
         android:layout_alignParentStart="true"
         app:srcCompat="@android:drawable/sym_def_app_icon"
         android:layout_alignParentTop="true" />
