--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,10 +10,11 @@
         android:id="@+id/profileHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Profile"
-        android:textSize="30sp"
         android:layout_alignBottom="@+id/profileImage"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="My Profile"
+        android:textSize="24sp" />
 
     <ImageView
         android:id="@+id/profileImage"
