--- a/app/src/main/res/layout/activity_user_feed.xml
+++ b/app/src/main/res/layout/activity_user_feed.xml
@@ -17,28 +17,28 @@
         tools:context="com.codepath.engage.ViewEvents"
         android:fitsSystemWindows="true">
 
-        <include
-            android:id="@+id/include"
-            layout="@layout/navigational"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="0dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvEvents"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/include"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="2dp"
             tools:layout_editor_absoluteY="65dp"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/feed"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:id="@+id/feed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="21dp"
+            android:text="My Feed"
+            android:textSize="30sp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+           />
 
     </RelativeLayout>
 
