--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.codepath.engage.LoginActivity"
-    android:background="@drawable/tree">
+    >
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
@@ -18,16 +19,13 @@
         android:paddingTop="15sp"
         android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/textView"
+    <ImageView
+        android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="39dp"
-        android:fontFamily="serif"
-        android:text="@string/welcome"
-        android:textAppearance="@android:style/TextAppearance.Large"
-        android:textSize="30sp" />
+        android:layout_above="@+id/login_button"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="82dp"
+        app:srcCompat="@drawable/logomark" />
 
 </RelativeLayout>
