--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -15,7 +14,7 @@
 
         <include
             android:id="@+id/toolbar"
-            layout="@layout/navigational"/>
+            layout="@layout/navigational" />
 
         <TextView
             android:id="@+id/hpIssues"
@@ -26,13 +25,13 @@
             android:layout_marginTop="66dp"
             android:text="@string/issues"
             android:textAllCaps="true"
-            android:textSize="30sp"
+            android:textSize="40sp"
             android:textStyle="bold" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvIssues"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/hpIssues"
             android:layout_marginTop="13dp" />
@@ -51,6 +50,5 @@
             android:layout_height="match_parent"
             android:scrollbars="vertical"/>
     </FrameLayout>
-
 
 </android.support.v4.widget.DrawerLayout>
