--- a/app/src/main/res/layout/navigational.xml
+++ b/app/src/main/res/layout/navigational.xml
@@ -2,30 +2,35 @@
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/toolbar_home"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:fitsSystemWindows="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+    android:layout_width="match_parent"
+    android:layout_height="?attr/actionBarSize"
+    android:fitsSystemWindows="true"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentStart="true"
+    app:contentInsetLeft="0dp"
+    app:contentInsetStart="0dp"
+    app:contentInsetStartWithNavigation="0dp">
+
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignBottom="@+id/toolbar_home">
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/search_edit_frame"/>
 
         <android.support.v7.widget.SearchView
             android:id="@+id/search"
-            android:layout_width="294dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
             android:actionViewClass="android.support.v7.widget.SearchView"
-            android:gravity="start"
+            android:gravity="end"
+            android:layout_toStartOf="@+id/btnFilter"
             android:theme="@style/SearchViewTheme"
-            app:iconifiedByDefault="false"
-            app:queryHint="Search Events"
-            android:layout_toStartOf="@+id/btnFilter"/>
+            app:queryHint="Search For Events" />
 
         <ImageButton
             android:id="@+id/btnFilter"
@@ -37,7 +42,7 @@
             android:scaleType="fitCenter"
             android:layout_marginStart="5dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"/>
-
+            android:layout_alignParentTop="true"
+            />
     </RelativeLayout>
 </android.support.v7.widget.Toolbar>
