--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -1,32 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="178dp"
+    android:layout_height="180dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/header_gradient"
     android:orientation="vertical"
-    android:paddingStart="30dp"
     android:paddingEnd="30dp"
-    android:background="@drawable/header_gradient">
+    android:paddingStart="30dp">
 
-    <ImageView
-        android:id="@+id/profileImageView"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_gravity="start|top"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        app:border_color="@android:color/white"
+        app:border_width="8dp"
+        android:id="@+id/profileImageView"
+        />
+
     <TextView
         android:id="@+id/nameTxt"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:textColor="@android:color/white"
         android:textSize="14sp"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/emailTxt"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
         android:layout_marginTop="5dp"
+        android:textColor="@android:color/white"
         android:textSize="14sp"
         android:textStyle="normal"/>
 </LinearLayout>
