--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -7,7 +7,8 @@
     android:orientation="horizontal"
     android:gravity="center|start"
     android:paddingStart="20dp"
-    android:paddingEnd="20dp">
+    android:paddingEnd="20dp"
+    android:background="?android:attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/itemNameTxt"
