--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -26,8 +26,9 @@
             android:layout_marginTop="66dp"
             android:text="@string/issues"
             android:textAllCaps="true"
-            android:textSize="45sp"
-            android:textStyle="bold" />
+            android:textSize="52sp"
+            android:textStyle="bold"
+            android:textColor="#000000"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvIssues"
