--- a/app/src/main/res/layout/item_issue.xml
+++ b/app/src/main/res/layout/item_issue.xml
@@ -12,5 +12,8 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
-        android:textSize="28sp" />
+        android:background="@drawable/containerissue"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="38sp" />
 </RelativeLayout>
