--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -5,11 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codepath.engage.EventDetailsActivity">
+    tools:context="com.codepath.engage.EventDetailsActivity"
+    android:background="@color/white">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="50dp">
+        android:layout_alignParentBottom="true">
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -18,10 +19,13 @@
                 android:id="@+id/ivPicture"
                 android:layout_width="match_parent"
                 android:layout_height="175dp"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/tvEventName"
-                android:layout_margin="10dp"
-                app:srcCompat="@android:color/black" />
+                app:srcCompat="@android:color/black"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_alignParentStart="true" />
 
             <TextView
                 android:id="@+id/tvHost"
@@ -70,25 +74,27 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="30dp"
                 android:layout_marginTop="10dp"
-                android:name="com.google.android.youtube.player.YouTubePlayerFragment">
+                android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment">
             </fragment>
         </RelativeLayout>
     </ScrollView>
-    <Button
-        android:id="@+id/btnSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/save"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="5dp"
-        android:onClick="saveEvent"/>
-    <Button
-        android:id="@+id/btnMap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/map"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_margin="5dp" />
+
+    <!--android:layout_alignBottom="@+id/btnMap"-->
+    <!--<Button-->
+        <!--android:id="@+id/btnSave"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/save"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_margin="5dp"-->
+        <!--android:onClick="saveEvent"/>-->
+    <!--<Button-->
+        <!--android:id="@+id/btnMap"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/map"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_margin="5dp" />-->
 </RelativeLayout>
