--- a/app/src/main/res/drawable/chat_rounded_rect_bg.xml
+++ b/app/src/main/res/drawable/chat_rounded_rect_bg.xml
@@ -8,7 +8,7 @@
     <!--TODO changes the border color for the text bubble, Increase dp to set thickness of border. Delete if not needed-->
     <stroke
         android:width="1dp"
-        android:color="@color/green_500"/>
+        android:color="@color/black"/>
 
 
 </shape>
