--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -32,6 +32,7 @@
     <ImageView
         android:id="@+id/Home"
         android:layout_width="30dp"
+        android:onClick="goHome"
         android:layout_height="30dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
